# kern

./: package-lock.json  package.json
docs/: plugin-tabs.md
documentation/: PLUGIN_DEVELOPMENT.md
plugins/discord_bot/: manifest.json
plugins/minecraft_java/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugins/minecraft_java/src/: downloadManager.ts  installer.ts  javaSelector.ts  main.ts  style.css  types.ts  versionFetcher.ts
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  download.rs  java.rs  lib.rs  manifest.rs  process.rs  ui_state.rs
src/components/layout/: Sidebar.tsx
src/components/plugins/: PluginBoot.tsx  PluginInstallDialog.tsx  PluginManager.tsx  PluginTabContent.tsx  PluginWrapper.tsx
src/components/servers/: CodeEditor.tsx  EditorTabBar.tsx  FileEditorPanel.tsx  FileTree.tsx  ServerDetailView.tsx  ServerForm.tsx  ServerList.tsx  ansi.ts  editorTheme.ts  monarchLanguages.ts
src/hooks/: useFileEditor.ts  useMcVersions.ts  usePluginTabs.tsx  useServerControl.ts  useSidebarItems.tsx  useToolbarActions.tsx  useUiState.tsx
src/types/: editor.ts  manifest.ts  plugin.ts  server.ts
